--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <h1 class="about">What is MK?</h1>
       <p class="mk-meaning">
         MK is one of the best penis enlargement. Male delay solution, lasting 60
-        minutes sex products for men penis enlargement cream.Grow your penis and
-        enhance your sexual drive. Highly effective for penis enlargement,
+        minutes sex products for men penis enlargement cream. Grow your penis
+        and enhance your sexual drive. Highly effective for penis enlargement,
         prevents premature ejaculation, lasting longer during sex, enhance your
         sex drive and enjoy full sweet sex.
       </p>
